# courtbook

./: .env.example  .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
api/: alembic.ini  pyproject.toml
api/app/: main.py  worker.py
api/app/core/: auth.py  config.py  database.py  dependencies.py
api/app/models/: __init__.py  base.py  booking.py  credit.py  member.py  organisation.py  preference.py
api/app/routes/: auth.py  bookings.py  organisations.py  preferences.py  webhooks.py
api/app/schemas/: __init__.py
api/app/services/: booking_rules.py  credit.py  email.py  operating_hours.py  pricing.py  stripe_service.py
api/migrations/: env.py
api/migrations/versions/: 258480e72486_initial_schema.py  2708d2770e53_add_pricing_columns_and_credit_.py  448999d3e244_initial_schema.py  597f84499f8d_add_user_preferences.py  f322bc729171_add_coach_tiers_max_daily_minutes_.py
api/scripts/: import_csv.py  seed.py
api/tests/: conftest.py  test_api.py
docker/: api.Dockerfile  docker-compose.yml
docs/session_summaries/: session_summary_courtbook_reorientation_2026-04-21.md  session_summary_reorientation_2026-04-21.md
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/api/: client.ts  endpoints.ts
web/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
web/src/hooks/: useAvailability.ts  useBookings.ts  useCourts.ts  usePreferences.ts  useResourceLookup.ts  useSiteAvailability.ts  useSites.ts
web/src/lib/: constants.ts  format.ts  storage.ts
web/src/pages/: ForgotPasswordPage.tsx  LoginPage.tsx  (+3 more)
(+15 files in other folders)
